add sonar cloud test coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=BI-RPA-Charles-Sin_weather-app
 sonar.organization=bi-rpa-charles-sin
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=weather-app
